improved position handling when POSTing to playlist
